log
Fri, Apr 18, 2025 12:22:14 AM: 
 hashmap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:58:22: error: 'Pair {aka struct Pair}' has no member named 'next'
             aux = aux->next;
                      ^~
hashmap.c:60:17: error: 'Pair {aka struct Pair}' has no member named 'next'
         new_pair->next = map->buckets[hash_value];
                 ^~
eeef3b7
Sat, Apr 19, 2025  8:17:01 PM: 
 hashmap.c | 24 ------------------------
 1 file changed, 24 deletions(-)
 tests:  0|6
total_score: 0/70
68252ea
Sat, Apr 19, 2025  8:17:41 PM: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  1|5
total_score: 10/70
d57c4c2
Sat, Apr 19, 2025  8:21:20 PM: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  5|4
total_score: 30/70
94086f2
Sat, Apr 19, 2025  8:29:40 PM: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  8|3
total_score: 40/70
57ba04f
Sat, Apr 19, 2025  8:37:06 PM: 
 hashmap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  11|2
total_score: 50/70
7bbf460
Sat, Apr 19, 2025  9:12:10 PM: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c:158:8: error: redefinition of 'nextMap'
 Pair * nextMap(HashMap * map) {
        ^~~~~~~
hashmap.c:145:8: note: previous definition of 'nextMap' was here
 Pair * nextMap(HashMap * map) {
        ^~~~~~~
0483887
Sat, Apr 19, 2025  9:13:57 PM: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  16|1
total_score: 60/70
9f7e587
Sat, Apr 19, 2025 10:29:43 PM: 
 hashmap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  17|0
total_score: 70/70
d1732d1
